2008-10-04  Dan Williams  <dcbw@redhat.com>

	* src/applet-device-gsm.c
	  src/applet-device-cdma.c
	  src/applet-device-wired.c
		- (wired_device_state_changed, cdma_device_state_changed,
		   gsm_device_state_changed): show what connection just got connected

2008-10-03  Dan Williams  <dcbw@redhat.com>

	* src/wireless-dialog.c
		- (internal_init): when creating wifi networks, make the default button
			be "Create" instead of "Connect" (rh #465397); make the default
			button actually be default (bgo #554700) (patch from Rui Matos)

2008-10-03  Dan Williams  <dcbw@redhat.com>

	* src/connection-editor/page-ip4.c
		- (routes_button_clicked_cb): check method before trying to use it
			(rh #465395)

2008-10-02  Dan Williams  <dcbw@redhat.com>

	* src/applet.c
	  src/applet.h
		- (foo_device_added_cb, foo_device_state_changed_cb): use the state-changed
			signal rather than property notification so that old state and the
			reason for the state change can be used as well

	* src/applet-device-gsm.c
	  src/applet-device-wifi.c
	  src/applet-device-cdma.c
	  src/applet-device-wired.c
		- Update device state changed handler functions for these changes

2008-10-01  Dan Williams  <dcbw@redhat.com>

	* src/gconf-helpers/gconf-helpers.c
	  src/gconf-helpers/gconf-helpers.h
		- (nm_gconf_get_valuehash_helper, nm_gconf_set_valuehash_helper): no
			longer used; disable for now

2008-09-29  Dan Williams  <dcbw@redhat.com>

	* src/applet-dialogs.c
	  src/connection-editor/ce-page-wireless.glade
	  src/connection-editor/nm-connection-editor.c
		- Correct translatables (bgo #554193)

2008-09-29  Dan Williams  <dcbw@redhat.com>

	* src/connection-editor/vpn-helpers.c
		- (import_vpn_from_file_cb): ensure scope is always valid

	* src/connection-editor/nm-connection-editor.c
		- (nm_connection_editor_set_connection): validate incoming connections
			to ensure the OK button gets the right status when the dialog is
			shown and that pages update their internal settings appropriately
