@@ -1,5 +1,17 @@
 2008-10-04  Dan Williams  <dcbw@redhat.com>
 
+	* src/wireless-dialog.c
+		- (internal_init): use 'authentication' instead of secrets (bgo #548130);
+			use 'hidden' instead of 'other' (bgo #544381)
+
+	* src/applet-device-wifi.c
+	  src/applet-device-wifi.h
+	  src/applet.c
+		- (nma_menu_show_cb, nma_menu_add_hidden_network_item): use 'hidden'
+			instead of 'other' (bgo #544381)
+
+2008-10-04  Dan Williams  <dcbw@redhat.com>
+
 	* src/applet-device-gsm.c
 	  src/applet-device-cdma.c
 	  src/applet-device-wired.c
